# cronjobs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agilize_invoice.py  crontab  docker-compose.yml  logs.py  nota.py  pyproject.toml  requirements-dev.txt  requirements.txt  taxes.py
.github/workflows/: python-app.yml
agilize_invoice/: requirements.txt
agilize_prolabore/: __main__.py  requirements.txt
agilize_taxes/: __main__.py  requirements.txt
contrib/: env-sample
cronjobs/: agilize_invoice.py  instagram.py  itau_spreadsheet.py  logs.py  nota.py  nubank_spreadsheet.py  prolabore.py  taxes.py
cronjobs/gastos/: sheet.py
cronjobs/gastos/itau/: __main__.py  checking_account.py  credit_card.py  sheet.py
cronjobs/gastos/nubank/: __main__.py  credit_card.py
cronjobs/itau/: __init__.py  __main__.py  checking_account.py  credit_card.py  sheet.py
cronjobs/storage/google/: auth.py  drive.py  sheet.py
itau_spreadsheet/: __main__.py  requirements.txt
nubank-spreadsheet/: __main__.py  main.py  requirements.txt
nubank-spreadsheet/contrib/: env-sample  service_creds.json
nubank_spreadsheet/: __init__.py  __main__.py  categories.py  requirements.txt
senior_spreadsheet/: __main__.py  requirements.txt
sf-trello/: main.py  requirements.txt
sf-trello/contrib/: env-sample
spreadsheets/: __init__.py
storage/google/: drive.py  sheet.py
tests/: test_itau_credit_card.py  test_nubank_spreadsheet.py
tests/gastos/: test_sheet.py
tests/gastos/itau/: test_itau_checking_account.py  test_itau_credit_card.py
tests/nubank_spreadsheet/: test_credit_events.py  test_debit_events.py
tests/storage/google/: test_spreadsheet.py
utils/: log.py
