[tool.poetry]
name = "cronjobs"
version = "0.0.1"
description = ""
authors = ["Lucas Rangel Cezimbra <lucas@cezimbra.tec.br>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

agilize = "^0.0.10"
bancointer = "^0.1.0"
cattrs = "^23.2.3"
instagrapi = "2.0.0"
loguru = "^0.7.2"
oauth2client = "^4.1.3"
pygsheets = "^2.0.6"
pillow = "^10.2.0"
pyitau = "^1.3.0"
pypdf2 = "^3.0.1"
python-decouple = "^3.8"
schedule = "^1.2.1"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
faker = "^22.2.0"
ipython = "^8.18.1"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
