[tool.poetry]
name = "cronjobs"
version = "0.0.1"
description = ""
authors = ["Lucas Rangel Cezimbra <lucas@cezimbra.tec.br>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

agilize = "0.0.10"
bancointer = "0.1.1"
cattrs = "23.2.3"
instagrapi = "2.0.3"
loguru = "0.7.2"
oauth2client = "4.1.3"
pygsheets = "2.0.6"
pillow = "10.2.0"
pyitau = "1.3.1"
pypdf2 = "3.0.1"
python-decouple = "3.8"
schedule = "1.2.1"
typer = "0.9.0"


[tool.poetry.group.dev.dependencies]
coveralls = "3.3.1"
faker = "25.0.0"
ipython = "8.22.2"
pre-commit = "3.7.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
